Prevent overflow-x

--- a/style/main.scss
+++ b/style/main.scss
@@ -10,8 +10,8 @@ html {
     padding: 0;
     background: #F3F3F3;
     font-family: 'Inter', 'Roboto';
-    max-width: 100%;
     min-height: 100vh;
+    max-width: 100vw;
     overflow-x: hidden;
 }
 
@@ -205,7 +205,7 @@ header {
         }
 
         .blank {
-            height: 5em;
+            height: 3em;
         }
 
 
